--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,3 +17,15 @@ $breakpoint-hamburger : 768px;
 @import "skeleton";
 @import "header";
 @import "footer";
+
+
+// tamaños imgs
+
+// <a href="https://iniciativaidea.org/" target="_blank">
+// <picture>
+//     <!-- Desktop -->
+//     <source media="(min-width:1200px)" srcset="img/logo@2x.png" alt="logo-idea">
+//     <!-- Mobile  -->
+//     <img src="img/logo.png" alt="logo-idea">
+// </picture>
+// </a>
