--- a/sass/skeleton.scss
+++ b/sass/skeleton.scss
@@ -37,14 +37,44 @@ button {
 }
 
 main {
-	margin-right: 23px;
-	margin-left: 23px;
+	section {
+		margin-right: 23px;
+		margin-left: 23px;
+	}
 	section.top-main {
 		h3 {
 			font-size: 30px;
-			color: #BBFF50;
+			color: #bbff50;
 			-webkit-text-stroke-width: 0.5px;
-            -webkit-text-stroke-color: black;
+			-webkit-text-stroke-color: black;
+			margin-bottom: 5px;
+		}
+		h6 {
+			font-size: 23px;
+			font-weight: bold;
+			margin: 0;
+		}
+	}
+	section.idea-dospuntocero {
+		background-image: url("img/Fondo-sin-texto.png");
+		background-repeat: no-repeat;
+		background-size: cover;
+		background-position: right;
+		height: 350px;
+		margin: 0;
+
+		h1 {
+			text-align: center;
+			font-size: 50px;
+			padding-top: 178px;
+			display: block;
+			color: #bbff50;
+			-webkit-text-stroke-width: 0.5px;
+			-webkit-text-stroke-color: black;
+			text-transform: uppercase;
+			span {
+				color: white;
+			}
 		}
 	}
 }
