--- a/sass/skeleton.scss
+++ b/sass/skeleton.scss
@@ -163,5 +163,36 @@ main {
 			-webkit-text-stroke-width: 0.5px;
 			-webkit-text-stroke-color: black;
 		}
+
+		article.tarjetas figure.tarjeta {
+			picture {
+				height: 125px;
+				display: block;
+				margin: 0 auto;
+				width: fit-content;
+				padding: 21px;
+				border-radius: 65px;
+				margin-bottom: 50px;
+				margin-top: 20px;
+
+				&.rosa {
+					background-color: #f03d93;
+				}
+				&.amarillo {
+					background-color: #fce864;
+				}
+				&.violeta {
+					background-color: #6929d2;
+				}
+			}
+
+			figcaption {
+				text-align: center;
+				font-size: 16px;
+				color: #33333380;
+				max-width: 206px;
+				margin: 0 auto;
+			}
+		}
 	}
 }
