--- a/sass/skeleton.scss
+++ b/sass/skeleton.scss
@@ -165,16 +165,27 @@ main {
 		}
 
 		article.tarjetas figure.tarjeta {
+			box-shadow: -1px 0px 8px 12px #00183415;
+			border-radius: 20px;
+			border-bottom-right-radius: 81px;
+			border-top-left-radius: 81px;
+			max-width: 270px;
+			padding-bottom: 59px;
+			margin: 0 auto 100px;
 			picture {
 				height: 125px;
-				display: block;
 				margin: 0 auto;
-				width: fit-content;
 				padding: 21px;
 				border-radius: 65px;
 				margin-bottom: 50px;
 				margin-top: 20px;
-
+				position: relative;
+				width: 125px;
+				text-align: center;
+				top: -20px;
+				display: flex;
+				justify-content: center;
+				align-items: center;
 				&.rosa {
 					background-color: #f03d93;
 				}
