--- a/sass/skeleton.scss
+++ b/sass/skeleton.scss
@@ -212,7 +212,19 @@ main {
 			text-align: center;
 			font-size: 26px;
 			font-weight: bold;
-			margin-bottom: 70px;
+			margin-bottom: 50px;
+
+			a.terminos-condiciones {
+				color: #F03D93;
+				text-decoration: underline;
+			}
+		}
+
+		p.apartado-aclaración {
+			font-size: 15px;
+			text-align: center;
+			margin-bottom: 30px;
+			color: #33333380;
 		}
 
 		figure.tarjeta {
