--- a/sass/skeleton.scss
+++ b/sass/skeleton.scss
@@ -108,6 +108,11 @@ main {
 				font-weight: bold;
 			}
 		}
+
+		img {
+			width: 100%;
+			margin: 0 auto;
+		}
 	}
 
 	section.desafios {
@@ -215,7 +220,7 @@ main {
 			margin-bottom: 50px;
 
 			a.terminos-condiciones {
-				color: #F03D93;
+				color: #f03d93;
 				text-decoration: underline;
 			}
 		}
@@ -256,6 +261,72 @@ main {
 				max-width: 206px;
 				margin: 0 auto;
 			}
+		}
+	}
+
+	section.funcionamiento-reto {
+		background-color: #fce864;
+		border-top-left-radius: 114px;
+		border-bottom-left-radius: 20px;
+		margin-right: 0;
+		margin-left: 0;
+		h2 {
+			font-size: 42px;
+			color: #bbff50;
+			-webkit-text-stroke-width: 0.5px;
+			-webkit-text-stroke-color: black;
+			max-width: 500px;
+			margin: 0 auto;
+			margin-bottom: 32px;
+			text-align: center;
+			padding-top: 37px;
+		}
+
+		div {
+			text-align: center;
+			font-size: 20px;
+			max-width: 244px;
+			margin: 0 auto;
+			span {
+				font-weight: 900;
+			}
+
+			span::before {
+				content: " ";
+				background-color: black;
+				width: 1px;
+				height: 40px;
+				display: block;
+				margin: 0 auto;
+				margin-bottom: 9px;
+				margin-top: 9px;
+			}
+		}
+
+		img {
+			width: 100%;
+			margin: 0 auto;
+			display: block;
+			padding-right: 20px;
+			padding-left: 20px;
+			padding-top: 45px;
+			padding-bottom: 50px;
+		}
+	}
+
+	section.tienes-una-startup {
+		background-color: #ddffa7;
+		border-top-left-radius: 114px;
+		border-top-right-radius: 20px; 
+		border-bottom-left-radius: 20px; 
+		border-bottom-right-radius: 20px; 
+		p.tienes-destacado {
+			font-size: 31px;
+			text-align: center;
+			font-weight: bold;
+			max-width: 292px;
+			padding: 100px 9px 30px;
+			margin: 0 auto;
 		}
 	}
 }
