primer version mobile done2

--- a/sass/skeleton.scss
+++ b/sass/skeleton.scss
@@ -335,6 +335,7 @@ main {
 			text-align: center;
 			margin: 0 auto;
 			margin-bottom: 50px;
+			padding: 0 13px;
 		}
 		p.tienes-destacado {
 			font-size: 31px;
