--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -20,7 +20,7 @@ footer {
             padding-top: 50px;
             color: #33333380;
             border-top: solid 0.5px;
-            margin-top: 30px;
+            margin: 30px 0
         }
     }
 }
