--- a/sass/skeleton.scss
+++ b/sass/skeleton.scss
@@ -44,6 +44,10 @@ a {
 	margin: 0 auto;
 	margin-top: 50px;
 	margin-bottom: 50px;
+	@media (min-width: 768px) {
+		width: 350px;
+		font-size: 32px;
+	}
 }
 
 button {
@@ -57,6 +61,10 @@ main {
 		-webkit-text-stroke-width: 0.5px;
 		-webkit-text-stroke-color: black;
 		margin-bottom: 5px;
+
+		@media (min-width: 768px) {
+			font-size: 40px;
+		}
 	}
 	section {
 		margin-right: 23px;
@@ -67,6 +75,9 @@ main {
 			font-size: 23px;
 			font-weight: bold;
 			margin: 0;
+			@media (min-width: 768px) {
+				font-size: 30px;
+			}
 		}
 	}
 	section.idea-dospuntocero {
@@ -77,6 +88,9 @@ main {
 		height: 350px;
 		margin: 0;
 
+		@media (min-width: 768px) {
+			height: 500px;
+		}
 		h1 {
 			text-align: center;
 			font-size: 50px;
@@ -88,6 +102,10 @@ main {
 			text-transform: uppercase;
 			span {
 				color: white;
+			}
+			@media (min-width: 768px) {
+				font-size: 69px;
+				padding-top: 272px;
 			}
 		}
 	}
@@ -124,10 +142,18 @@ main {
 
 		ul {
 			margin-top: 30px;
+			@media (min-width: 768px) {
+				max-width: 600px;
+				margin: 0 auto;
+				margin-top: 60px;
+			}
 			li {
 				font-size: 17px;
 				overflow: auto;
 				margin-bottom: 20px;
+				@media (min-width: 768px) {
+					font-size: 22px;
+				}
 				span {
 					font-weight: bold;
 				}
@@ -212,6 +238,9 @@ main {
 				color: #33333380;
 				max-width: 206px;
 				margin: 0 auto;
+				@media (min-width: 768px) {
+					font-size: 20px;
+				}
 			}
 		}
 	}
@@ -286,6 +315,9 @@ main {
 			padding-right: 40px;
 			padding-left: 40px;
 			max-width: 600px;
+			@media (min-width: 768px) {
+				font-size: 50px;
+			}
 		}
 
 		div {
@@ -293,6 +325,9 @@ main {
 			font-size: 20px;
 			max-width: 244px;
 			margin: 0 auto;
+			@media (min-width: 768px) {
+				font-size: 26px;
+			}
 			span {
 				font-weight: 900;
 			}
@@ -336,6 +371,9 @@ main {
 			margin: 0 auto;
 			margin-bottom: 50px;
 			padding: 0 13px;
+			@media (min-width: 768px) {
+				font-size: 32px;
+			}
 		}
 		p.tienes-destacado {
 			font-size: 31px;
@@ -343,6 +381,9 @@ main {
 			font-weight: bold;
 			padding: 100px 9px 30px;
 			margin: 0 auto;
+			@media (min-width: 768px) {
+				font-size: 40px;
+			}
 		}
 		a {
 			@include postulate-link;
