cambio img mapa

--- a/sass/skeleton.scss
+++ b/sass/skeleton.scss
@@ -358,7 +358,7 @@ main {
 			padding-bottom: 59px;
 			margin: 0 auto 80px;
 			margin-top: 130px;
-		
+
 			span {
 				font-size: 140px;
 				color: #6929d2;
@@ -440,6 +440,8 @@ main {
 			padding-left: 20px;
 			padding-top: 45px;
 			padding-bottom: 50px;
+			border-radius: 70px;
+			border-top-left-radius: 110px;
 		}
 	}
 
