--- a/sass/skeleton.scss
+++ b/sass/skeleton.scss
@@ -336,7 +336,6 @@ main {
 					}
 					@media (min-width: 1200px) {
 						margin-top: -19px;
-
 					}
 				}
 
@@ -359,8 +358,8 @@ main {
 			text-align: center;
 			font-size: 26px;
 			font-weight: bold;
-			margin-bottom: 50px;
-
+			max-width: 1210px;
+			margin: auto;
 			a.terminos-condiciones {
 				color: #f03d93;
 				text-decoration: underline;
@@ -372,6 +371,21 @@ main {
 			text-align: center;
 			margin-bottom: 30px;
 			color: #33333380;
+			@media (min-width: 1200px) {
+				max-width: 800px;
+				margin: auto;
+				padding: 40px 0;
+			}
+		}
+
+		article.tarjetas-numeros {
+			@media (min-width: 1200px) {
+				display: flex;
+				align-items: center;
+				justify-content: space-around;
+				max-width: 1200px;
+				margin: auto;
+			}
 		}
 
 		div.tarjeta {
@@ -382,6 +396,10 @@ main {
 			padding-bottom: 59px;
 			margin: 0 auto 80px;
 			margin-top: 130px;
+			@media (min-width: 1200px) {
+				width: 270px;
+				margin: 130px auto 120px;
+			}
 
 			span {
 				font-size: 140px;
@@ -415,6 +433,13 @@ main {
 		border-bottom-left-radius: 20px;
 		margin-right: 0;
 		margin-left: 0;
+		@media (min-width: 1200px) {
+			margin-top: 200px;
+			margin-left: 100px;
+			margin-right: 100px;
+			position: relative;
+			padding-bottom: 100px;
+		}
 		h2 {
 			font-size: 42px;
 			color: #bbff50;
@@ -430,6 +455,18 @@ main {
 			@media (min-width: 768px) {
 				font-size: 50px;
 			}
+			@media (min-width: 1200px) {
+				margin: 0;
+				padding-top: 116px;
+			}
+		}
+
+		article.funcionamiento-camino {
+			@media (min-width: 1200px) {
+				position: relative;
+				left: 63px;
+				width: fit-content;
+			}
 		}
 
 		div {
@@ -439,6 +476,7 @@ main {
 			margin: 0 auto;
 			@media (min-width: 768px) {
 				font-size: 26px;
+				max-width: 100%;
 			}
 			span {
 				font-weight: 900;
@@ -466,6 +504,12 @@ main {
 			padding-bottom: 50px;
 			border-radius: 70px;
 			border-top-left-radius: 110px;
+			@media (min-width: 768px) {
+				width: 600px;
+				position: absolute;
+				top: -126px;
+				right: 28px;
+			}
 		}
 	}
 
