--- a/sass/skeleton.scss
+++ b/sass/skeleton.scss
@@ -360,6 +360,7 @@ main {
 			font-weight: bold;
 			max-width: 1210px;
 			margin: auto;
+			margin-bottom: 50px;
 			a.terminos-condiciones {
 				color: #f03d93;
 				text-decoration: underline;
@@ -370,6 +371,7 @@ main {
 			font-size: 15px;
 			text-align: center;
 			margin-bottom: 30px;
+			margin-top: 30px;
 			color: #33333380;
 			@media (min-width: 1200px) {
 				max-width: 800px;
@@ -436,7 +438,6 @@ main {
 		@media (min-width: 1200px) {
 			margin-top: 200px;
 			margin-left: 100px;
-			margin-right: 100px;
 			position: relative;
 			padding-bottom: 100px;
 		}
@@ -504,7 +505,7 @@ main {
 			padding-bottom: 50px;
 			border-radius: 70px;
 			border-top-left-radius: 110px;
-			@media (min-width: 768px) {
+			@media (min-width: 1200px) {
 				width: 600px;
 				position: absolute;
 				top: -126px;
@@ -522,6 +523,11 @@ main {
 		margin-top: 43px;
 		padding-bottom: 50px;
 		margin-bottom: 50px;
+		@media (min-width: 1200px) {
+			margin-left: 100px;
+			margin-right: 75px;
+			margin-top: 110px;
+		}
 		p {
 			font-size: 23px;
 			font-weight: bold;
@@ -531,6 +537,11 @@ main {
 			padding: 0 13px;
 			@media (min-width: 768px) {
 				font-size: 32px;
+			}
+			@media (min-width: 1200px) {
+				margin: 0;
+				max-width: 800px;
+				padding-left: 50px;
 			}
 		}
 		p.tienes-destacado {
@@ -542,9 +553,19 @@ main {
 			@media (min-width: 768px) {
 				font-size: 40px;
 			}
+			@media (min-width: 1200px) {
+				margin: 0;
+				max-width: 800px;
+				padding-left: 50px;
+			}
 		}
 		a {
 			@include postulate-link;
+			@media (min-width: 1200px) {
+				position: relative;
+				left: 370px;
+				bottom: 110px;
+			}
 		}
 	}
 }
