reloj ajustado mas

--- a/sass/skeleton.scss
+++ b/sass/skeleton.scss
@@ -52,6 +52,7 @@ a {
 		right: 0;
 		top: -20px;
 		background-color: white;
+		justify-content: center;
 		@media (min-width: 1200px) {
 			width: 970px;
 			justify-content: center;
