--- a/sass/skeleton.scss
+++ b/sass/skeleton.scss
@@ -197,7 +197,6 @@ main {
 		@media (min-width: 1200px) {
 			margin-top: 50px;
 			padding-top: 200px;
-
 		}
 		article {
 			background-color: #f4f4f4;
@@ -615,6 +614,26 @@ main {
 				position: relative;
 				left: 370px;
 				bottom: 110px;
+			}
+		}
+	}
+
+	section.media-partners {
+		max-width: 1100px;
+		margin: 0 auto;
+		p {
+			font-size: 31px;
+			text-align: center;
+			font-weight: bold;
+			margin: 0 auto;
+		}
+		article {
+			display: flex;
+			flex-wrap: wrap;
+			align-items: center;
+			justify-content: center;
+			img {
+				width: 130px;
 			}
 		}
 	}
